load("@crt//rules:run.bzl", "platform_runner")

platform_runner(
    name = "greeter_client",
    binary = "//grpc_example:greeter_client",
    exec_config = "@crt//platforms/x86_64:qemu_windows",
    platform = "@crt//platforms/x86_64:win64",
    substitutions = {
        "shutdown": "",
    },
)

platform_runner(
    name = "greeter_client_win32",
    binary = "//grpc_example:greeter_client",
    exec_config = "@crt//platforms/x86_64:qemu_windows",
    platform = "@crt//platforms/x86_32:win32",
    substitutions = {
        "shutdown": "",
        "quick_kill": "false",
    },
)
